feat: [FE] 상품 리스트 결제금액 변경 기능

--- a/delivery-market/src/main/resources/templates/member/my-page/cart-list.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/cart-list.html
@@ -30,25 +30,25 @@
                             <p class="text-start mb-2">상품 금액</p>
                         </div>
                         <div class="col-6">
-                            <p class="text-end mb-2">410,800 원</p>
+                            <p class="text-end mb-2" id="total-price">0 원</p>
                         </div>
                         <div class="col-6">
                             <p class="text-start mb-2">할인 금액</p>
                         </div>
                         <div class="col-6">
-                            <p class="text-end mb-2">-41,800 원</p>
+                            <p class="text-end mb-2" id="total-discount-price">0 원</p>
                         </div>
                         <div class="col-6">
                             <p class="text-start mb-2">배송비</p>
                         </div>
                         <div class="col-6">
-                            <p class="text-end mb-2">3,000 원</p>
+                            <p class="text-end mb-2" id="delivery-price">3,000 원</p>
                         </div>
                         <div class="col-6">
                             <p class="text-start mt-4 mb-2">결제예정금액</p>
                         </div>
                         <div class="col-6">
-                            <p class="text-end mt-4 mb-2 fw-bold">410,800 원</p>
+                            <p class="text-end mt-4 mb-2 fw-bold" id="total-pay-price">0 원</p>
                         </div>
                     </div>
                 </div>
