--- a/delivery-market/src/main/resources/templates/member/my-page/cash-charging.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/cash-charging.html
@@ -18,6 +18,21 @@
                 <a id="submit" class="btn w-100 mt-2 bg-success-subtle text-success-emphasis">충전하기</a>
             </form>
         </div>
+        <div class="border-bottom mt-5">
+            <span class="fs-3">캐시 충전 내역</span>
+        </div>
+        <table class="table mt-5 p-5 text-center">
+            <thead>
+            <tr>
+                <th scope="col">요청 금액</th>
+                <th scope="col">상태</th>
+                <th scope="col">요청 시각</th>
+                <th scope="col">마지막 응답 시각</th>
+            </tr>
+            </thead>
+            <tbody id="cash-list">
+            </tbody>
+        </table>
     </div>
 </div>
 </body>
