--- a/delivery-market-admin/src/main/resources/templates/member/cash-list.html
+++ b/delivery-market-admin/src/main/resources/templates/member/cash-list.html
@@ -34,6 +34,22 @@
                 </table>
             </div>
         </div>
+        <div class="col-12">
+            <nav id="pagination" aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link previous-page" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link next-page" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </div>
 </body>
