--- a/delivery-market-admin/src/main/resources/templates/member/cash-list.html
+++ b/delivery-market-admin/src/main/resources/templates/member/cash-list.html
@@ -15,10 +15,16 @@
             </nav>
         </div>
         <div class="col-12">
+
+        </div>
+        <div class="col-12">
             <div class="table-responsive small">
                 <table class="table table-hover table-sm text-center">
                     <thead>
                     <tr>
+                        <th scope="col">
+                            <input class="form-check-input all-check" type="checkbox">
+                        </th>
                         <th scope="col">No.</th>
                         <th scope="col">요청 금액</th>
                         <th scope="col">상태</th>
