feat: 사용자 - 캐시 요청 취소 기능 추가

--- a/delivery-market/src/main/resources/templates/member/my-page/cash-charging.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/cash-charging.html
@@ -28,6 +28,7 @@
                 <th scope="col">상태</th>
                 <th scope="col">요청 시각</th>
                 <th scope="col">마지막 응답 시각</th>
+                <th scope="col">취소</th>
             </tr>
             </thead>
             <tbody id="cash-list">
