--- a/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
+++ b/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
@@ -21,13 +21,14 @@
                 </div>
             </li>
             <li class="mb-1">
-                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-                    Dashboard
+                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="true">
+                    회원
                 </button>
-                <div class="collapse" id="dashboard-collapse">
+                <div class="collapse show" id="dashboard-collapse">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Overview</a></li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Weekly</a></li>
+                        <li><a href="/members" class="link-body-emphasis d-inline-flex text-decoration-none rounded">회원 관리</a></li>
+                        <li><a href="/members/cash/list" class="link-body-emphasis d-inline-flex text-decoration-none rounded">DM 캐시 관리</a></li>
+                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">적립금 관리</a></li>
                         <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Monthly</a></li>
                         <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Annually</a></li>
                     </ul>
