feat: 카테고리 수정 페이지 버튼 정렬 변경

--- a/delivery-market-admin/src/main/resources/templates/category/category-edit.html
+++ b/delivery-market-admin/src/main/resources/templates/category/category-edit.html
@@ -45,12 +45,17 @@
                     </div>
                 </div>
             </form>
-            <div class="d-flex justify-content-center mt-5">
-                <button type="button" class="btn btn-outline-success" id="edit-category-btn">저장</button>
-                <button th:id="delete-all-category" type="button" class="btn btn-outline-danger w-100">전체 삭제</button>
-                <a type="button" class="btn btn-outline-secondary ms-3" href="/categories">취소</a>
+            <div class="row mt-5">
+                <div class="col-4">
+                    <button type="button" class="btn w-100 btn-outline-success" id="edit-category-btn">저장</button>
+                </div>
+                <div class="col-4">
+                    <button th:id="delete-all-category" type="button" class="btn btn-outline-danger w-100">전체 삭제</button>
+                </div>
+                <div class="col-4">
+                    <a type="button" class="btn btn-outline-secondary w-100 ms-3" href="/categories">취소</a>
+                </div>
             </div>
-
         </div>
     </div>
 </div>
