--- a/delivery-market-admin/src/main/resources/templates/member/member-list.html
+++ b/delivery-market-admin/src/main/resources/templates/member/member-list.html
@@ -27,6 +27,7 @@
                         <th scope="col">상태</th>
                         <th scope="col">등급</th>
                         <th scope="col">전화번호</th>
+                        <th scope="col">이메일</th>
                         <th scope="col">캐시</th>
                         <th scope="col">포인트</th>
                     </tr>
