--- a/delivery-market/src/main/resources/static/css/basic.css
+++ b/delivery-market/src/main/resources/static/css/basic.css
@@ -99,6 +99,13 @@
     margin-right: 20px;
 }
 
+.order-content-area {
+    margin-top: 90px;
+    margin-bottom: 20px;
+    margin-left: 400px;
+    margin-right: 400px;
+}
+
 .left-margin-content-area {
     margin: 90px 20px 20px 280px;
     padding: 20px 10px 10px;
