--- a/delivery-market/src/main/resources/templates/fragments/sidebar.html
+++ b/delivery-market/src/main/resources/templates/fragments/sidebar.html
@@ -9,7 +9,7 @@
             <div class="collapse show" id="favorite-menu">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                     <li><a href="/my-page/pick/list" class="link-body-emphasis d-inline-flex text-decoration-none rounded">찜한 상품</a></li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Weekly</a></li>
+                    <li><a href="/my-page/cash/charging" class="link-body-emphasis d-inline-flex text-decoration-none rounded">캐시 충전</a></li>
                     <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Monthly</a></li>
                     <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Annually</a></li>
                 </ul>
