--- a/delivery-market/src/main/resources/templates/member/my-page/cart-list.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/cart-list.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-success btn-lg w-100 mt-3">구매하기</button>
+            <button type="button" id="order" class="btn btn-success btn-lg w-100 mt-3">구매하기</button>
         </div>
     </div>
 </div>
