--- a/delivery-market/src/main/resources/templates/good/order.html
+++ b/delivery-market/src/main/resources/templates/good/order.html
@@ -53,26 +53,31 @@
         </div>
         <div class="fs-4 border-bottom mt-5 mb-3">결제 정보</div>
         <div class="row align-items-center mx-5">
+            <p>결제할 금액</p>
+            <div class="col-12 mb-1 text-end">
+                <span class="total-price"></span>
+                <small>원</small>
+            </div>
             <p>적립금 · DM 캐시</p>
             <div class="col-3 offset-3 mb-1">
                 <small>사용 가능 잔액</small>
             </div>
             <div class="col-6 mb-1 text-end">
-                5,000
+                <span class="total-member-price"></span>
                 <small>원</small>
             </div>
             <div class="col-3 offset-3 mb-1">
                 <small>ㄴ 적립금</small>
             </div>
             <div class="col-6 mb-1 text-end">
-                1,000
+                <span class="point"></span>
                 <small>원</small>
             </div>
             <div class="col-3 offset-3 mb-1">
                 <small>ㄴ DM 캐시</small>
             </div>
             <div class="col-6 mb-1 text-end">
-                4,000
+                <span class="cash"></span>
                 <small>원</small>
             </div>
             <p>총 결제금액</p>
@@ -80,17 +85,20 @@
                 <small>ㄴ 적립금</small>
             </div>
             <div class="col-6 mb-1 text-end">
-                1,000
+                <span class="use-point"></span>
                 <small>원</small>
             </div>
             <div class="col-3 offset-3 mb-1">
                 <small>ㄴ DM 캐시</small>
             </div>
             <div class="col-6 mb-1 text-end">
-                4,000
+                <span class="use-cash"></span>
                 <small>원</small>
             </div>
-            <a id="submit" class="btn w-100 mt-5 bg-success-subtle text-success-emphasis">결제하기</a>
+            <a id="submit" class="btn w-100 mt-5 bg-success-subtle text-success-emphasis">
+                <span class="total-price"></span>
+                원 결제하기
+            </a>
         </div>
     </form>
 
