fix: 상품 금액에 수량 고려하지 않은 문제 해결

--- a/delivery-market/src/main/resources/templates/good/order.html
+++ b/delivery-market/src/main/resources/templates/good/order.html
@@ -53,9 +53,27 @@
         </div>
         <div class="fs-4 border-bottom mt-5 mb-3">결제 정보</div>
         <div class="row align-items-center mx-5">
-            <p>결제할 금액</p>
-            <div class="col-12 mb-1 text-end">
-                <span class="total-price"></span>
+            <p>결제 예상 금액</p>
+            <div class="col-3 offset-3 mb-1">
+                <small>상품 금액</small>
+            </div>
+            <div class="col-6 mb-1 text-end">
+                <span class="total-good-price"></span>
+                <small>원</small>
+            </div>
+            <div class="col-3 offset-3 mb-1">
+                <small>할인 금액</small>
+            </div>
+            <div class="col-6 mb-1 text-end">
+                <small>-</small>
+                <span class="total-discount-price"></span>
+                <small>원</small>
+            </div>
+            <div class="col-3 offset-3 mb-1">
+                <small>배송비</small>
+            </div>
+            <div class="col-6 mb-1 text-end">
+                <span class="delivery-price"></span>
                 <small>원</small>
             </div>
             <p>적립금 · DM 캐시</p>
