--- a/delivery-market/src/main/resources/templates/good/good-detail.html
+++ b/delivery-market/src/main/resources/templates/good/good-detail.html
@@ -10,22 +10,18 @@
         </div>
         <div class="col-7">
             <div class="row">
-                <div class="col-12 mb-0" id="good-name">
-                    <h5></h5>
-                </div>
-                <div class="col-12" id="good-summary">
-                    <p style="color: gray"></p>
-                </div>
-                <div class="col-12 mb-0" id="good-discount-price">
+                <h5 id="good-name"></h5>
+                <p class="text-secondary" id="good-summary"></p>
+                <div class="col-12 mb-0" id="discount-area">
                     <h4 class="mb-0">
-                        <span style="color: rgb(250, 98, 47);"></span>
-                        <span></span>
+                        <span id="discount-percent" style="color: rgb(250, 98, 47);"></span>
+                        <span id="discount-price"></span>
                     </h4>
-                    <p class="text-decoration-line-through" style="color: gray"></p>
+                    <p class="text-decoration-line-through text-secondary" id="good-original-price"></p>
                 </div>
-                <div class="col-12" id="good-price">
+                <div class="col-12" id="price-area">
                     <h4 class="mb">
-                        <span></span>
+                        <span id="good-price"></span>
                     </h4>
                 </div>
                 <div class="col-12 border-bottom" id="good-detail-origin">
