--- a/delivery-market-admin/src/main/resources/templates/good/good-edit.html
+++ b/delivery-market-admin/src/main/resources/templates/good/good-edit.html
@@ -197,7 +197,7 @@
                                         <div class="col-3 pb-3">
                                             <label class="form-label">재고</label>
                                             <div class="input-group mb-3">
-                                                <input type="text" th:value="${option.amount}" name="'goodsOptions[' + ${iterStat.index} + '].amount'" class="optionAmount form-control">
+                                                <input type="text" th:value="${option.getQuantity}" name="'goodsOptions[' + ${iterStat.index} + '].quantity'" class="optionQuantity form-control">
                                                 <span class="input-group-text">개</span>
                                             </div>
                                         </div>
