feat: 상품 상세에서 saleStatus에 따라 노출 여부 및 및 선택 가능 여부 기능

--- a/delivery-market/src/main/resources/templates/good/good-detail.html
+++ b/delivery-market/src/main/resources/templates/good/good-detail.html
@@ -24,48 +24,48 @@
                         <span id="good-price"></span>
                     </h4>
                 </div>
-                <div class="col-12 border-bottom" id="good-detail-origin">
-                    <h5></h5>
+                <div class="col-12 border-bottom" id="good-detail-origin-area">
+                    <h5 id="good-detail-origin"></h5>
                 </div>
                 <div class="col-12">
-                    <div class="row border-bottom" id="good-detail-packaging-type">
+                    <div class="row border-bottom">
                         <div class="col-3">
-                            <p class="my-2"></p>
+                            <p class="my-2">포장타입</p>
                         </div>
                         <div class="col-9">
+                            <p class="my-2" id="good-detail-packaging-type"></p>
+                        </div>
+                    </div>
+                    <div class="row border-bottom">
+                        <div class="col-3">
+                            <p class="my-2">중량/용량</p>
+                        </div>
+                        <div class="col-9">
+                            <p class="my-2" id="good-detail-weight-volume"></p>
+                        </div>
+                    </div>
+                    <div class="row border-bottom" id="good-detail-allergyInfo-area">
+                        <div class="col-3">
+                            <p class="my-2">알레르기 정보</p>
+                        </div>
+                        <div class="col-9" id="good-detail-allergyInfo">
                             <p class="my-2"></p>
                         </div>
                     </div>
-                    <div class="row border-bottom" id="good-detail-weight-volume">
+                    <div class="row border-bottom" id="good-detail-guidelines-area">
                         <div class="col-3">
-                            <p class="my-2"></p>
+                            <p class="my-2">안내사항</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-9" id="good-detail-guidelines">
                             <p class="my-2"></p>
                         </div>
                     </div>
-                    <div class="row border-bottom" id="good-detail-allergyInfo">
+                    <div class="row border-bottom" id="good-detail-expiry-date-area">
                         <div class="col-3">
-                            <p class="my-2"></p>
+                            <p class="my-2">소비기한(또는 유통기한)</p>
                         </div>
                         <div class="col-9">
-                            <p class="my-2"></p>
-                        </div>
-                    </div>
-                    <div class="row border-bottom" id="good-detail-guidelines">
-                        <div class="col-3">
-                            <p class="my-2"></p>
-                        </div>
-                        <div class="col-9">
-                            <p class="my-2"></p>
-                        </div>
-                    </div>
-                    <div class="row border-bottom" id="good-detail-expiry-date">
-                        <div class="col-3">
-                            <p class="my-2"></p>
-                        </div>
-                        <div class="col-9">
-                            <p class="my-2"></p>
+                            <p class="my-2" id="good-detail-expiry-date"></p>
                         </div>
                     </div>
                     <div class="row border-bottom" id="good-detail-option-area">
