--- a/delivery-market/src/main/resources/templates/member/my-page/cash-charging.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/cash-charging.html
@@ -17,6 +17,11 @@
                 <input type="text" class="form-control" id="amount" name="amount" placeholder="예) 50000">
                 <a id="submit" class="btn w-100 mt-2 bg-success-subtle text-success-emphasis">충전하기</a>
             </form>
+            <p class="mt-3">
+                <span>잔여 금액 : </span>
+                <span id="remain-cash"></span>
+                <span>원</span>
+            </p>
         </div>
         <div class="border-bottom mt-5">
             <span class="fs-3">캐시 충전 내역</span>
