--- a/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
+++ b/delivery-market-admin/src/main/resources/templates/fragments/sidebar.html
@@ -9,10 +9,10 @@
         </a>
         <ul class="list-unstyled ps-0">
             <li class="mb-1">
-                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#good-collapse" aria-expanded="true">
                     상품
                 </button>
-                <div class="collapse show" id="home-collapse">
+                <div class="collapse show" id="good-collapse">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                         <li><a href="/categories" class="link-body-emphasis d-inline-flex text-decoration-none rounded">카테고리 리스트</a></li>
                         <li><a href="/categories/add" class="link-body-emphasis d-inline-flex text-decoration-none rounded">카테고리 추가</a></li>
@@ -21,10 +21,10 @@
                 </div>
             </li>
             <li class="mb-1">
-                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="true">
+                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#member-collapse" aria-expanded="true">
                     회원
                 </button>
-                <div class="collapse show" id="dashboard-collapse">
+                <div class="collapse show" id="member-collapse">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                         <li><a href="/members" class="link-body-emphasis d-inline-flex text-decoration-none rounded">회원 관리</a></li>
                         <li><a href="/members/cash/list" class="link-body-emphasis d-inline-flex text-decoration-none rounded">DM 캐시 관리</a></li>
@@ -35,12 +35,12 @@
                 </div>
             </li>
             <li class="mb-1">
-                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-                    Orders
+                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="true">
+                    주문
                 </button>
-                <div class="collapse" id="orders-collapse">
+                <div class="collapse show" id="orders-collapse">
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">New</a></li>
+                        <li><a href="/orders" class="link-body-emphasis d-inline-flex text-decoration-none rounded">주문 내역</a></li>
                         <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Processed</a></li>
                         <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Shipped</a></li>
                         <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Returned</a></li>
