--- a/delivery-market-admin/src/main/resources/templates/order/order-list.html
+++ b/delivery-market-admin/src/main/resources/templates/order/order-list.html
@@ -89,6 +89,7 @@
                         <th scope="col">결제 금액</th>
                         <th scope="col">주문 상태</th>
                         <th scope="col">주문자</th>
+                        <th scope="col">주문일시</th>
                     </tr>
                     </thead>
                     <tbody id="order-list">
