--- a/delivery-market/src/main/resources/templates/member/my-page/order-detail.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/order-detail.html
@@ -108,6 +108,28 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button bg-white collapsed" aria-expanded="false" type="button" data-bs-toggle="collapse" data-bs-target="#delivery-list-area">
+                        배송 내역
+                    </button>
+                </h2>
+                <div id="delivery-list-area" class="accordion-collapse collapse">
+                    <div class="accordion-body">
+                        <table class="table text-center">
+                            <thead>
+                            <tr>
+                                <th scope="col">처리일시</th>
+                                <th scope="col">현재위치</th>
+                                <th scope="col">처리현황</th>
+                            </tr>
+                            </thead>
+                            <tbody id="delivery-list">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
             <div class="hstack gap-3">
                 <div class="p-2">
                     <small>주문취소는 [배송 준비중] 상태일 경우에만 가능합니다.</small>
