feat: 후기 관리 페이지 연결

--- a/delivery-market/src/main/resources/templates/fragments/sidebar.html
+++ b/delivery-market/src/main/resources/templates/fragments/sidebar.html
@@ -28,13 +28,13 @@
         </li>
         <li class="mb-1">
             <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-                Orders
+                쇼핑
             </button>
             <div class="collapse" id="orders-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">New</a></li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Processed</a></li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Shipped</a></li>
+                    <li><a href="/my-page/cash/charging" class="link-body-emphasis d-inline-flex text-decoration-none rounded">캐시 충전</a></li>
+                    <li><a href="/my-page/order" class="link-body-emphasis d-inline-flex text-decoration-none rounded">주문 내역</a></li>
+                    <li><a href="/my-page/review" class="link-body-emphasis d-inline-flex text-decoration-none rounded">후기 관리</a></li>
                     <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Returned</a></li>
                 </ul>
             </div>
